[tool.poetry]
name = "concat-pandas"
version = "1.0"
description = "https://blog.gnkm.info/pandas-concat の記事で扱ったソースコード"
authors = ["gnkm"]

[tool.poetry.dependencies]
python = "3.8.13"

pandas = "1.5.3"
tabulate = "0.9.0"

[tool.poetry.dev-dependencies]
black = "23.1.0"
flake8 = "^4.0.1"
icecream = "^2.1.2"
isort = "5.12.0"
pylint = "^2.14.4"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
